fixes #8937: align the dropdown menus in input groups

--- a/less/input-groups.less
+++ b/less/input-groups.less
@@ -5,6 +5,7 @@
 // Base styles
 // -------------------------
 .input-group {
+  position: relative; // For dropdowns
   display: table;
   border-collapse: separate; // prevent input groups from inheriting border styles from table cells when placed within a table
 
